kubernetes/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.axel/name: axel-backend
  name: backend-deployment
spec:
  replicas: 4
  selector:
    matchLabels:
      app.axel/name: axel-backend
  template:
    metadata:
      labels:
        app.axel/name: axel-backend
    spec:
      containers:
      - image: ghcr.io/notaphplover/axel/backend-node:latest
        name: backend
        ports:
        - containerPort: 3000
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
