kubernetes/db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.axel/name: axel-db
  name: db-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app.axel/name: axel-db
  template:
    metadata:
      labels:
        app.axel/name: axel-db
    spec:
      containers:
      - image: mongo:4.4.1-bionic
        name: db
        ports:
        - containerPort: 27017
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
