kubernetes/redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.axel/name: axel-redis
  name: redis-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app.axel/name: axel-redis
  template:
    metadata:
      labels:
        app.axel/name: axel-redis
    spec:
      containers:
      - image: redis:6.2.1-alpine
        name: redis
        ports:
        - containerPort: 6379
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
