kubernetes/ws-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.axel/name: axel-ws-server
  name: ws-server-deployment
spec:
  replicas: 4
  selector:
    matchLabels:
      app.axel/name: axel-ws-server
  template:
    metadata:
      labels:
        app.axel/name: axel-ws-server
    spec:
      containers:
      - image: ghcr.io/notaphplover/axel/backend-node:latest
        args: ["npm", "run", "ws-server:start:docker"]
        name: backend
        ports:
        - containerPort: 3001
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
