kubernetes/api-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-server-service
  labels:
    run: api-server-deployment
spec:
  externalTrafficPolicy: Local
  ports:
  - port: 3000
    protocol: TCP
  selector:
    app.axel/name: axel-api-server
  type: LoadBalancer
