kubernetes/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  labels:
    run: backend-deployment
spec:
  externalTrafficPolicy: Local
  ports:
  - port: 3000
    protocol: TCP
  selector:
    app.axel/name: axel-backend
  type: LoadBalancer
