kubernetes/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: db-service
  labels:
    run: db-deployment
spec:
  ports:
  - port: 27017
  selector:
    app.axel/name: axel-db
