kubernetes/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-service
  labels:
    run: redis-deployment
spec:
  ports:
  - port: 6379
  selector:
    app.axel/name: axel-redis
