kubernetes/ws-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ws-server-service
  labels:
    run: ws-server-deployment
spec:
  externalTrafficPolicy: Local
  ports:
  - port: 3001
    protocol: TCP
  selector:
    app.axel/name: axel-ws-server
  type: LoadBalancer
